# femtoclaw-compliance

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  compliance_report.json
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/framework/: runner.rs  types.rs
src/reporter/: mod.rs
src/tests/: mod.rs
src/tests/capability/: mod.rs
src/tests/performance/: mod.rs
src/tests/protocol/: mod.rs
src/tests/runtime/: mod.rs
src/tests/security/: mod.rs
