[package]
name = "femtoclaw-compliance"
version = "1.0.1"
edition = "2021"
description = "FemtoClaw Reference Compliance Test Harness"
license = "Apache-2.0"
repository = "https://github.com/femtoclaw/femtoclaw-compliance.git"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
